# GameOfLife

./: CMakeLists.txt  Glider Gun.gol  Linia.gol  MSM Breeder.gol
src/: app.cpp  app.h  conway_automaton.cpp  conway_automaton.h  main.cpp  movable_view.cpp  movable_view.h
src/gui/: gui.cpp  gui.h  gui_button.cpp  gui_button.h
src/util/: hsv_to_rgb.h
